...

    var label: String {
        switch self {
        case .natural:
            return "Natural"
        case .chromatic:
            return "Chromatic"
        }
    }

    var answerChoices: [NoteName] {
        switch self {
        case .natural:
...
